--- a/lesson-04-spring-boot/src/main/resources/application.properties
+++ b/lesson-04-spring-boot/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-server.servlet.context-path=/spring-mvc-app
 server.port=8080
+server.servlet.context-path=/app/
 
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot_db?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/products?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
